[tool.poetry]
name = "heskapi"
version = "0.1.0"
description = "Hesk (HelpDesk) API with web docs"
authors = ["Nickolsky <romb.intu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pytest = "^8.1.1"
cryptography = "^42.0.5"
bson = "^0.5.10"
requests = "^2.31.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
